deployment/mesh-infra/security/opa/opa-envoy-plugin.yaml
apiVersion: v1
kind: Service
metadata:
  name: opa
  labels:
    app: opa
spec:
  ports:
  - name: grpc
    port: 9191
    targetPort: 9191
  selector:
    app: opa

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: opa
  labels:
    app: opa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opa
  template:
    metadata:
      labels:
        app: opa
    spec:
      containers:
        - name: opa
          image: openpolicyagent/opa:0.53.1-envoy
          securityContext:
            runAsUser: 1111
          #volumeMounts:
          #- readOnly: true
          #  mountPath: /policy
          #  name: opa-policy
          args:
          - "run"
          - "--server"
          - "--addr=localhost:8181"
          - "--diagnostic-addr=0.0.0.0:8282"
          - "--set=services.default.url=http://minio.minio-operator.svc.cluster.local/"
          - "--set=bundles.default.resource=opa-policy-bundles/bundle.tar.gz"
          - "--set=plugins.envoy_ext_authz_grpc.addr=:9191"
          - "--set=plugins.envoy_ext_authz_grpc.query=data.teadal.allow"
          - "--set=decision_logs.console=true"
          - "--ignore=.*"
          - "--log-format=json-pretty"
          - "--log-level=debug"
          #- "/policy/"
          ports:
          - containerPort: 9191
          livenessProbe:
            httpGet:
              path: /health?plugins
              scheme: HTTP
              port: 8282
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health?plugins
              scheme: HTTP
              port: 8282
            initialDelaySeconds: 5
            periodSeconds: 5
      #volumes:
      #  - name: opa-policy
      #    secret:
      #      secretName: opa-policy
